<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/bluegrass_situation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/bluegrass_situation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/textNumTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_num_tickets"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerNumTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:entries="@array/num_tickets_options" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="right" >

        <TextView
            android:id="@+id/textTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_total"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textCostTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/text_quantity_total"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonProceedCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_proceed_checkout" />

    <Button
        android:id="@+id/buttonOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_order"
        android:visibility="gone" />    
</LinearLayout>
